Added additional links

--- a/_posts/2019-10-24-devops4rse.md
+++ b/_posts/2019-10-24-devops4rse.md
@@ -77,12 +77,14 @@ Specific objectives will vary between different teams but will include:
 
 #### Preparation work
 Background training material and talks that will help you prepare for the day
-are listed below listed from basic to advanced. Don't worry if you don't feel
+are listed below. Don't worry if you don't feel
 like a DevOps guru before you arrive as there will be lots of opportunities
 to ask questions of fellow practitioners and Azure experts over the course of
 the sprint. Depending on demand we may have break out sessions to walk
 through specific topics.
 
+Tutorials and documentation:
+* [DevOps for the busy data scientist](https://speakerdeck.com/trallard/practical-devops-for-the-busy-data-scientist-b85e6447-6f6e-4caf-8441-acf1cb117a95)
 * Git: http://swcarpentry.github.io/git-novice/
 * Test framework based on programming language, e.g.
   - Python - pytest - https://docs.pytest.org/en/latest/
@@ -92,6 +94,12 @@ through specific topics.
   - https://docs.docker.com/get-started/part2/
 * Azure Pipelines
   - https://azure.microsoft.com/en-gb/services/devops/pipelines/
+
+Suggested reading on reproducibility in computational research:
+* [Docker Containers for Reproducible Research Workshop](https://www.software.ac.uk/blog/2017-07-31-docker-workshop-2017), follow links for talks.
+* [Reproducible and replicable CFD: it's harder than you think](https://arxiv.org/abs/1605.04339), Olivier Mesnard, Lorena A. Barba. IEEE/AIP Computing in Science and Engineering, 19(4):44–55 (August 2017).
+* [Is software reproducibility possible and practical?](https://danielskatzblog.wordpress.com/2017/02/07/is-software-reproducibility-possible-and-practical/), Daniel S. Katz's blog
+* [Singularity containers for HPC, reproducibility and mobility](https://www.nextplatform.com/2017/04/10/singularity-containers-hpc-reproducibility-mobility/)
 
 #### Projects/codes
 Feel free to bring your own code to work on or join a team working on a code
