Added review blog for last sprint.

--- a/_posts/2019-04-02-sprint0.md
+++ b/_posts/2019-04-02-sprint0.md
@@ -55,3 +55,7 @@ Adopt and adapt where possible, reuse, do not reinvent the wheel. Some examples:
 * https://docs.microsoft.com/en-us/azure/architecture/reference-architectures/ai/batch-scoring-deep-learning
 
 Material developed at the Research Software Reactor will be reused and extended at future events such as the German RSE conference in June.
+
+---
+
+<a href="https://twitter.com/gerardjgorman?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @gerardjgorman</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
