--- a/_posts/2019-10-24-devops4rse.md
+++ b/_posts/2019-10-24-devops4rse.md
@@ -135,3 +135,13 @@ sprint.
 ### Registration
 Registration has not yet been opened. Please use the contact form on this
 site to register your interest.
+
+---
+
+# Organisers
+
+<a href="https://twitter.com/ixek?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">@ixek</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+
+<a href="https://twitter.com/gerardjgorman?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">@gerardjgorman</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+<a href="https://twitter.com/drsarahlgibson?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">@drsarahlgibson</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
