:pencil: Update post January event

--- a/_posts/2019-10-24-devops4rse.md
+++ b/_posts/2019-10-24-devops4rse.md
@@ -9,6 +9,16 @@ excerpt: Research Software Reactor are running a series of sprints for researche
 
 ## DevOps for better software and reproducible research
 
+## TL;DR
+- **What**: An open event for RSEs, researchers and those interested in making research
+softare more robust through DevOps, CI/CD, testing, and automation among other practices.
+This is an open community event for the community.
+- **When**: 9th-10th January 2020
+- **Where**: The Alan Turing Institute, British Library, 96 Euston Road, London NW1 2DB <https://www.turing.ac.uk/>
+- **Registration**: opening soon
+
+
+
 ### Background
 Lets face it, developing software for science and engineering is
 really hard. First there are the garden variety bugs that you find in all
@@ -64,44 +74,17 @@ practices and identify how DevOps needs to be improved to better support the
 research community.
 ---
 
----
-
-#### Sprint objectives
-
-Specific objectives will vary between different teams but will include:
-
+### Sprint objectives
+We will be adopting an "unconference style" for this event. Meaning that we do not have
+a fixed agenda of the projects we will be working on but the community will decide
+the topics and tools they are more interested in discussing/exploring,
+Some topics that could be explored are:
 * Training (Docker, CI/CD, testing).
 * Adding CI/CD to existing research software projects.
 * Pushing the frontier of CI/CD (multiple architectures, HPC). 
-* Feedback to Azure DevOps engineers wishlist of additional features for the research community.
+* Adopting DevOps practises for scientific computing.
 
-#### Preparation work
-Background training material and talks that will help you prepare for the day
-are listed below. Don't worry if you don't feel
-like a DevOps guru before you arrive as there will be lots of opportunities
-to ask questions of fellow practitioners and Azure experts over the course of
-the sprint. Depending on demand we may have break out sessions to walk
-through specific topics.
-
-Tutorials and documentation:
-* [DevOps for the busy data scientist](https://speakerdeck.com/trallard/practical-devops-for-the-busy-data-scientist-b85e6447-6f6e-4caf-8441-acf1cb117a95)
-* Git: http://swcarpentry.github.io/git-novice/
-* Test framework based on programming language, e.g.
-  - Python - pytest - https://docs.pytest.org/en/latest/
-  - C/C++ - googletest - https://github.com/google/googletest
-* Docker and containerizing an application
-  - https://docs.docker.com/get-started/
-  - https://docs.docker.com/get-started/part2/
-* Azure Pipelines
-  - https://azure.microsoft.com/en-gb/services/devops/pipelines/
-
-Suggested reading on reproducibility in computational research:
-* [Docker Containers for Reproducible Research Workshop](https://www.software.ac.uk/blog/2017-07-31-docker-workshop-2017), follow links for talks.
-* [Reproducible and replicable CFD: it's harder than you think](https://arxiv.org/abs/1605.04339), Olivier Mesnard, Lorena A. Barba. IEEE/AIP Computing in Science and Engineering, 19(4):44–55 (August 2017).
-* [Is software reproducibility possible and practical?](https://danielskatzblog.wordpress.com/2017/02/07/is-software-reproducibility-possible-and-practical/), Daniel S. Katz's blog
-* [Singularity containers for HPC, reproducibility and mobility](https://www.nextplatform.com/2017/04/10/singularity-containers-hpc-reproducibility-mobility/)
-
-#### Projects/codes
+### Bring your own project
 Feel free to bring your own code to work on or join a team working on a code
 you are interested in. If you want to propose your own project/code then
 please open an issue on GitHub giving details of the software and what you
@@ -109,6 +92,17 @@ would like help with. Similarly, browse github issues to see what existing
 projects you would like to participate in. The sprint will begin with an
 elevator pitch from each proposed project to recruit their dev team for the
 sprint.
+
+### Who should attend?
+Folks interested in improving the reliability of research software or interested in
+Continuous Integration, Continuous delivery and DevOps practices. 
+You will have some coding experience and should be prepared to get involved in the sessions
+and discussion including leading topics.
+
+### What should you bring?
+Make sure to bring a laptop. 
+
+Tea, cofee and lunch will be provided on both days.
 
 ### Agenda
 
@@ -136,6 +130,38 @@ sprint.
 Registration has not yet been opened. Please use the contact form on this
 site to register your interest.
 
+### Code of conduct
+
+All the attendees and organisers should abide by The Research Softwaree Reactor Code of 
+Conduct which can be found [on this site]({{site.baseurl}}/coc).
+
+### Preparation work
+Background training material and talks that will help you prepare for the day
+are listed below. Don't worry if you don't feel
+like a DevOps guru before you arrive as there will be lots of opportunities
+to ask questions of fellow practitioners and Azure experts over the course of
+the sprint. Depending on demand we may have break out sessions to walk
+through specific topics.
+
+Tutorials and documentation:
+* [DevOps for the busy data scientist](https://speakerdeck.com/trallard/practical-devops-for-the-busy-data-scientist-b85e6447-6f6e-4caf-8441-acf1cb117a95)
+* Git: http://swcarpentry.github.io/git-novice/
+* Test framework based on programming language, e.g.
+  - Python - pytest - https://docs.pytest.org/en/latest/
+  - C/C++ - googletest - https://github.com/google/googletest
+* Docker and containerizing an application
+  - https://docs.docker.com/get-started/
+  - https://docs.docker.com/get-started/part2/
+* Azure Pipelines
+  - https://azure.microsoft.com/en-gb/services/devops/pipelines/
+
+Suggested reading on reproducibility in computational research:
+* [Docker Containers for Reproducible Research Workshop](https://www.software.ac.uk/blog/2017-07-31-docker-workshop-2017), follow links for talks.
+* [Reproducible and replicable CFD: it's harder than you think](https://arxiv.org/abs/1605.04339), Olivier Mesnard, Lorena A. Barba. IEEE/AIP Computing in Science and Engineering, 19(4):44–55 (August 2017).
+* [Is software reproducibility possible and practical?](https://danielskatzblog.wordpress.com/2017/02/07/is-software-reproducibility-possible-and-practical/), Daniel S. Katz's blog
+* [Singularity containers for HPC, reproducibility and mobility](https://www.nextplatform.com/2017/04/10/singularity-containers-hpc-reproducibility-mobility/)
+
+
 ---
 
 # Organisers
@@ -145,3 +171,9 @@ site to register your interest.
 <a href="https://twitter.com/gerardjgorman?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">@gerardjgorman</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 <a href="https://twitter.com/drsarahlgibson?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">@drsarahlgibson</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+
+## Sponsors
+
+<div align="center">
+  <img alt="Logo" src="{{site.baseurl}}/images/logos/MSAzure.png" width="500"/>
+</div>
