--- a/_posts/2019-10-24-devops4rse.md
+++ b/_posts/2019-10-24-devops4rse.md
@@ -11,7 +11,7 @@ excerpt: Research Software Reactor are running a series of sprints for researche
 
 ## TL;DR
 - **What**: An open event for RSEs, researchers and those interested in making research
-softare more robust through DevOps, CI/CD, testing, and automation among other practices.
+software more robust through DevOps, CI/CD, testing, and automation among other practices.
 This is an open community event for the community.
 - **When**: 9th-10th January 2020
 - **Where**: The Alan Turing Institute, British Library, 96 Euston Road, London NW1 2DB <https://www.turing.ac.uk/>
@@ -77,7 +77,7 @@ research community.
 ### Sprint objectives
 We will be adopting an "unconference style" for this event. Meaning that we do not have
 a fixed agenda of the projects we will be working on but the community will decide
-the topics and tools they are more interested in discussing/exploring,
+the topics and tools they are more interested in discussing/exploring.
 Some topics that could be explored are:
 * Training (Docker, CI/CD, testing).
 * Adding CI/CD to existing research software projects.
