:bug: Fix Eventbrite link

--- a/_posts/2019-10-24-devops4rse.md
+++ b/_posts/2019-10-24-devops4rse.md
@@ -15,7 +15,7 @@ software more robust through DevOps, CI/CD, testing, and automation among other 
 This is an open community event for the community.
 - **When**: 9th-10th January 2020
 - **Where**: The Alan Turing Institute, British Library, 96 Euston Road, London NW1 2DB <https://www.turing.ac.uk/>
-- **Registration**: [Register on Eventbrite](https://www.eventbrite.com/e/devops-for-better-software-and-reproducible-research-tickets-80823074993
+- **Registration**: [External registration on Eventbrite](https://www.eventbrite.com/e/devops-for-better-software-and-reproducible-research-tickets-80823074993)
 
 
 
