--- a/_posts/2019-10-24-devops4rse.md
+++ b/_posts/2019-10-24-devops4rse.md
@@ -1,11 +1,11 @@
 ---
 title: 'DevOps for better software and reproducible research<br/>9-10 January 2020<br/>The Alan Turing Institute, London'
 date: 2019-10-24 00:00:00
-featured_image: '/images/devops.jpg'
+featured_image: '/images/devops.png'
 excerpt: Research Software Reactor are running a series of sprints for researchers/RSE's focused on DevOps (CI/CD) for better software and reproducible research. Activities will include basic DevOps training for research software development, testing, code verification methods, testing across multiple architectures and performance regression testing.
 ---
 
-![](/images/devops.jpg)
+![](/images/devops.png)
 
 ## DevOps for better software and reproducible research
 
