:wheelchair: Ensure all images have alt

--- a/_posts/2019-10-24-devops4rse.md
+++ b/_posts/2019-10-24-devops4rse.md
@@ -6,7 +6,7 @@ excerpt: Research Software Reactor are running a series of sprints for researche
 ---
 
 <div align="center">
-<img src="/images/devops.svg" width="80%"/>
+<img src="/images/devops.svg" width="80%" alt="Devops"/>
 </div>
 
 ## DevOps for better software and reproducible research
@@ -18,7 +18,6 @@ This is an open community event for the community.
 - **When**: 9th-10th January 2020
 - **Where**: The Alan Turing Institute, British Library, 96 Euston Road, London NW1 2DB <https://www.turing.ac.uk/>
 - **Registration**: [External registration on Eventbrite](https://www.eventbrite.com/e/devops-for-better-software-and-reproducible-research-tickets-80823074993)
-
 
 
 ### Background
