:pencil: Updating event details

--- a/_posts/2019-10-24-devops4rse.md
+++ b/_posts/2019-10-24-devops4rse.md
@@ -100,10 +100,26 @@ Continuous Integration, Continuous delivery and DevOps practices.
 You will have some coding experience and should be prepared to get involved in the sessions
 and discussion including leading topics.
 
-### What should you bring?
-Make sure to bring a laptop. 
+### FAQ
+
+- **What should I bring?**
+
+Make sure to bring a laptop. You might need to install some packages so make sure you can do so.
+
+- **Are we forced to use Azure for the projects?**
+
+No, you are free to use whatever infrastructure, tools and workflows you prefer. This is a 
+community led event and the outcomes are meant to serve the community and help solve your problems and 
+help others to have more efficient workflows.
+
+- **Will food be provided?**
 
 Tea, cofee and lunch will be provided on both days.
+
+- **How can I propose a project to work on?**
+
+You can propose a project by creating an issue in this repository <https://github.com/research-software-reactor/devops-for-research-sprint/issues> and attaching the label `project proposal 📃`. We will then discuss the projects
+on the day and break into teams.
 
 ### Agenda
 
@@ -133,7 +149,7 @@ site to register your interest.
 
 ### Code of conduct
 
-All the attendees and organisers should abide by The Research Softwaree Reactor Code of 
+All the attendees and organisers should abide by The Research Software Reactor Code of 
 Conduct which can be found [on this site]({{site.baseurl}}/coc).
 
 ### Preparation work
@@ -145,16 +161,18 @@ the sprint. Depending on demand we may have break out sessions to walk
 through specific topics.
 
 Tutorials and documentation:
-* [DevOps for the busy data scientist](https://speakerdeck.com/trallard/practical-devops-for-the-busy-data-scientist-b85e6447-6f6e-4caf-8441-acf1cb117a95)
-* Git: http://swcarpentry.github.io/git-novice/
+* Slides - [DevOps for the busy data scientist](https://speakerdeck.com/trallard/practical-devops-for-the-busy-data-scientist-b85e6447-6f6e-4caf-8441-acf1cb117a95)
+* Git: <http://swcarpentry.github.io/git-novice/>
 * Test framework based on programming language, e.g.
-  - Python - pytest - https://docs.pytest.org/en/latest/
-  - C/C++ - googletest - https://github.com/google/googletest
+  - Python - pytest - <https://docs.pytest.org/en/latest/>
+  - C/C++ - googletest - <https://github.com/google/googletest>
 * Docker and containerizing an application
-  - https://docs.docker.com/get-started/
-  - https://docs.docker.com/get-started/part2/
+  - <https://docs.docker.com/get-started/>
+  - <https://docs.docker.com/get-started/part2/>
 * Azure Pipelines
-  - https://azure.microsoft.com/en-gb/services/devops/pipelines/
+  - <https://azure.microsoft.com/en-gb/services/devops/pipelines/>
+* GitHub actions
+  * <https://help.github.com/en/actions/automating-your-workflow-with-github-actions>
 
 Suggested reading on reproducibility in computational research:
 * [Docker Containers for Reproducible Research Workshop](https://www.software.ac.uk/blog/2017-07-31-docker-workshop-2017), follow links for talks.
