:pencil: Add link to issue

--- a/_posts/2019-10-24-devops4rse.md
+++ b/_posts/2019-10-24-devops4rse.md
@@ -89,7 +89,7 @@ Some topics that could be explored are:
 Feel free to bring your own code to work on or join a team working on a code
 you are interested in. If you want to propose your own project/code then
 please open an issue on GitHub giving details of the software and what you
-would like help with. Similarly, browse github issues to see what existing
+would like help with (<https://github.com/research-software-reactor/devops-for-research-sprint/issues>). Similarly, browse github issues to see what existing
 projects you would like to participate in. The sprint will begin with an
 elevator pitch from each proposed project to recruit their dev team for the
 sprint.
