--- a/_posts/2019-11-29-rsr-aws0.md
+++ b/_posts/2019-11-29-rsr-aws0.md
@@ -5,7 +5,7 @@ featured_image: '/images/sprint0.jpg'
 excerpt: The goal of the Research Software Reactor is for the RSE community and vendors to come together and create a set of proof-of-concept projects and learning pathways specifically designed to support the research community get the most out of Cloud.
 ---
 
-![](/images/sprint0.jpg)
+![](/images/sprint2.jpg)
 
 ## Research Software Reactor
 
@@ -23,7 +23,7 @@ excerpt: The goal of the Research Software Reactor is for the RSE community and 
 #### Background
 As part of the Microsoft EMEA Higher Education Summit meeting in Brussels in March 2019, members of the *Research Software Engineering (RSE)* community across EMEA held a round table discussion with Microsoft to explore ways of making Cloud more research friendly. 
 While a diverse range of opportunities and barriers were touched upon, the key issue that dominated discussion was **skills and training** in the context of both RSE's and the communities they support. 
-Microsoft  with Micorsoft Learn and AWS through their educate program have created a vast repository of training material and many learning pathways, which the Research Software Reactor aims to build upon.
+Microsoft with Learn and AWS through their educate program have created a vast repository of training material and many learning pathways, which the Research Software Reactor aims to build upon.
 
 The Summit also identified that since institutions and our partners will have a variety of strategies, preferred partners for consuming cloud resources it is vital that as a community are able to develop knowledge and skills to use services provided by the major cloud vendors.  
 In response to this need, the third Research Software Reactor Sprint will be the first run in collaboration with AWS, in what we hope will broaden to support  researchers on whatever platform they need to use.
@@ -66,13 +66,13 @@ The advantage to this problem-based-learning approach is that it provides motiva
 * 13:00 - Lunch
 * 14:00 - Sprint
 * 16:30 - Status update and lessons learned
-* 17:00 - Social 
+* 17:00 - Social cvbcvbb
 
 #### Get engaged
 The Research Software Reactor Sprint is being planned to appeal to RSEs from the broadest range of backgrounds. 
 The event will be held at the University of Bath. 
 A [github repo](https://github.com/research-software-reactor/guidelines) has been set up to collect a wide range of proposals for case study that will be used in the sprint.
-We are reaching out to community for proposals and volunteers to review and identify appropriate range of workflows/research compute needs, reach the ‘long tail’ of research and representation across region. More generally these blueprints should sit within general framework delivering:
+We are reaching out to community for proposals and volunteers to review and identify appropriate range of workflows/research compute needs, reach the ‘long tail’ of research and representation across region. More generally these blueprints should sit within a framework delivering:
 * Security (data)
 * Authentication
 * Costing
@@ -88,9 +88,8 @@ Adopt and adapt where possible, reuse, do not reinvent the wheel. Some examples:
 ### RSR Impact
 
 Material developed at the Research Software Reactor will be reused and extended at future events such as the growing number of national RSE conferences.
-James Grant gave a talk on the summit and Research Software Reactor at [RSECon19](https://rseconuk2019.sched.com/event/QSRu/5a3-teaching-rse-summit-microsoft-cloudy-in-brussels.
-This has a link to the slides and the write up of the summit.
-Sarah Gibson also ran a workshop on launching [BinderHub on Azure](https://rseconuk2019.sched.com/event/QSRu/5a3-teaching-rse-summit-microsoft-cloudy-in-brussels%20also)
+* [James Grant](https://people.bath.ac.uk/rjg20/) gave a talk on the summit and Research Software Reactor at [RSECon19](https://rseconuk2019.sched.com/event/QSRu/5a3-teaching-rse-summit-microsoft-cloudy-in-brussels, which has a link to the slides and the write up of the summit.
+* [Sarah Gibson](https://www.turing.ac.uk/people/researchers/sarah-gibson) ran a workshop on launching [BinderHub on Azure](https://rseconuk2019.sched.com/event/QSRu/5a3-teaching-rse-summit-microsoft-cloudy-in-brussels%20also)
 
 ---
 
