--- a/_posts/2019-11-29-rsr-aws0.md
+++ b/_posts/2019-11-29-rsr-aws0.md
@@ -66,7 +66,26 @@ The advantage to this problem-based-learning approach is that it provides motiva
 * 13:00 - Lunch
 * 14:00 - Sprint
 * 16:30 - Status update and lessons learned
-* 17:00 - Social cvbcvbb
+* 17:00 - Social
+
+### FAQ
+
+- **What should I bring?**
+
+Make sure to bring a laptop. You might need to install some packages so make sure you can do so.
+
+- **Are we forced to use AWS for the projects?**
+
+The aim of this sprint is to provide and opportunity to develop 
+
+- **Will food be provided?**
+
+Tea, cofee and lunch will be provided on both days and we also hope to arrange a meal and social on the evening of Monday 6th April.
+
+- **How can I propose a project to work on?**
+
+Take a look at existing repositories in the Research Software Reactor organisation or propose a project by creating an issue in this repository <https://github.com/research-software-reactor/guidelines>. 
+You will have an opportunity to pitch your projects on  day 1 before we break into teams.
 
 #### Get engaged
 The Research Software Reactor Sprint is being planned to appeal to RSEs from the broadest range of backgrounds. 
