Added AWS logo and link

--- a/_posts/2019-11-29-rsr-aws0.md
+++ b/_posts/2019-11-29-rsr-aws0.md
@@ -120,5 +120,5 @@ Material developed at the Research Software Reactor will be reused and extended 
 ## Sponsors
 
 <div align="center">
-  <img alt="AWS Logo" src="{{site.baseurl}}/images/logos/AWS.png" width="500"/>
+  <img alt="AWS Logo" src="{{site.baseurl}}/images/logos/AWS.svg" width="500"/>
 </div>
