Added missing text on vendor specifcism

--- a/_posts/2019-11-29-rsr-aws0.md
+++ b/_posts/2019-11-29-rsr-aws0.md
@@ -76,7 +76,8 @@ Make sure to bring a laptop. You might need to install some packages so make sur
 
 - **Are we forced to use AWS for the projects?**
 
-The aim of this sprint is to provide and opportunity to develop 
+The aim of **this** sprint is to provide an opportunity to develop research compute solutions for AWS.
+Overall the aim of the Research Software Reactor is to support the development of learning pathways and solutions for research compute on all major vendors.
 
 - **Will food be provided?**
 
