Fix formatting and changed name of file

--- a/_posts/2019-11-29-sprint3-aws.md
+++ b/_posts/2019-11-29-sprint3-aws.md
@@ -5,22 +5,22 @@ featured_image: '/images/sprint0.jpg'
 excerpt: The goal of the Research Software Reactor is for the RSE community and vendors to come together and create a set of proof-of-concept projects and learning pathways specifically designed to support the research community get the most out of Cloud.
 ---
 
-![](/images/sprint2.jpg)
+![RSE-bot](/images/sprint0.jpg)
 
-## Research Software Reactor
+## Research Software Reactor Sprint
 
-## TL;DR
+### TL;DR
  * **What**: A 2 day sprint for RSEs and those interested in cloud computing to explore learning material and research compute solutions on AWS.  This is an open community event for the community.  Submit a proposal for a case study (POC, research scenario) or join an existing project (see below for details).
  * **When**: 6-7 April 2020
- * **Where**: Chancellors Building, University of Bath, Bath, BA2 7AY  [Rooms CB4.6, 4.7](https://www.bath.ac.uk/locations/the-chancellors-building/)].
+ * **Where**: Chancellors Building, University of Bath, Bath, BA2 7AY  [Rooms CB4.6, 4.7](https://www.bath.ac.uk/locations/the-chancellors-building/).
  * **Registration**: [Register here!](https://**eventrite page to be set up **)
 
-## Find out more:
+### Find out more:
  * [Mailing list](https://mailman.ic.ac.uk/mailman/listinfo/research-software-reactor)
  * Slack: see #cloudcomputing under ukrse.slack.com - join via [https://rse.ac.uk/](https://rse.ac.uk/)
  * [Agenda](#agenda)
 
-#### Background
+### Background
 As part of the Microsoft EMEA Higher Education Summit meeting in Brussels in March 2019, members of the *Research Software Engineering (RSE)* community across EMEA held a round table discussion with Microsoft to explore ways of making Cloud more research friendly. 
 While a diverse range of opportunities and barriers were touched upon, the key issue that dominated discussion was **skills and training** in the context of both RSE's and the communities they support. 
 Microsoft with Learn and AWS through their educate program have created a vast repository of training material and many learning pathways, which the Research Software Reactor aims to build upon.
@@ -29,7 +29,7 @@ The Summit also identified that since institutions and our partners will have a 
 In response to this need, the third Research Software Reactor Sprint will be the first run in collaboration with AWS, in what we hope will broaden to support  researchers on whatever platform they need to use.
 As well as having Solution Architects to work through learning material and solutions with attendees we hope to have existing researchers who are using AWS present their work to  suggest and inspire solutions to your research problem.
 
-#### Ideas and PR's welcome!
+### Ideas and PR's welcome!
 The goal of the **Research Software Reactor** is for the RSE community and vendors to come together and address this by creating a set of learning pathways specifically designed for the research community. 
 These will be largely a composition of existing learning material but reframed to focus on a set of archetypal case studies taken from research. 
 These learning pathways will be used by the research community as:
@@ -40,7 +40,7 @@ All cases will focus on creating an end-to-end example and therefore will develo
 *	Generic solution materials.
 *	Teaching repositories based on scenario/POC solutions for RSEs to build on.
 
-#### Learn by doing
+### Learn by doing
 The advantage to this problem-based-learning approach is that it provides motivational learning material to a wide research community whose first discipline is generally not computing. The approach also reflects the realities of the academic research environment where:
 *	Cloud in itself is not the objective – rather it is a means to get better results quicker in their research.
 *	RSE/RCA need to be able to help researchers deliver those results, as quickly and cost effectively, appropriately as possible.
@@ -88,7 +88,7 @@ Tea, cofee and lunch will be provided on both days and we also hope to arrange a
 Take a look at existing repositories in the Research Software Reactor organisation or propose a project by creating an issue in this repository <https://github.com/research-software-reactor/guidelines>. 
 You will have an opportunity to pitch your projects on  day 1 before we break into teams.
 
-#### Get engaged
+### Get engaged
 The Research Software Reactor Sprint is being planned to appeal to RSEs from the broadest range of backgrounds. 
 The event will be held at the University of Bath. 
 A [github repo](https://github.com/research-software-reactor/guidelines) has been set up to collect a wide range of proposals for case study that will be used in the sprint.
@@ -108,18 +108,18 @@ Adopt and adapt where possible, reuse, do not reinvent the wheel. Some examples:
 ### RSR Impact
 
 Material developed at the Research Software Reactor will be reused and extended at future events such as the growing number of national RSE conferences.
-* [James Grant](https://people.bath.ac.uk/rjg20/) gave a talk on the summit and Research Software Reactor at [RSECon19](https://rseconuk2019.sched.com/event/QSRu/5a3-teaching-rse-summit-microsoft-cloudy-in-brussels, which has a link to the slides and the write up of the summit.
+* [James Grant](https://people.bath.ac.uk/rjg20/) gave a talk on the summit and Research Software Reactor at [RSECon19](https://rseconuk2019.sched.com/event/QSRu/5a3-teaching-rse-summit-microsoft-cloudy-in-brussels), which has a link to the slides and the write up of the summit.
 * [Sarah Gibson](https://www.turing.ac.uk/people/researchers/sarah-gibson) ran a workshop on launching [BinderHub on Azure](https://rseconuk2019.sched.com/event/QSRu/5a3-teaching-rse-summit-microsoft-cloudy-in-brussels%20also)
 
 ---
 
-# Organisers
+### Organisers
 <a href="https://twitter.com/drjgrant?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">@drjgrant</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
 
 <a href="https://twitter.com/gerardjgorman?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">@gerardjgorman</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-## Sponsors
+### Sponsors
 
 <div align="center">
-  <img alt="AWS Logo" src="{{site.baseurl}}/images/logos/AWS.svg" width="500"/>
+  <img alt="AWS Logo" src="{{site.baseurl}}/images/logos/AWS.svg" width="300"/>
 </div>
